# P193_mnemonic_BugsBunny

./: .travis.yml  README.md
resources/: test_mnemonic.txt
resources/tests/: english_few_words.txt  english_too_many_words.txt  english_with_nums.txt  english_word_too_long.txt
src/: CMakeLists.txt  dictionary.c  dictionary.h  errorcodes.c  errorcodes.h  example.c  mnemonics.c  mnemonics.h  playground.c
tests/: CMakeLists.txt  test_dictionary.c  test_mnemonics.c
tests/entropy_to_mnemonic-leak/: README.md  leak-session.gdb  main.c  makefile  patch.c  perform-leak.sh
